# btu.py

./: LICENSE  README.md  pyproject.toml
btu/: __main__.py  classroom.py
examples/: check_inbox.py  check_points.py  get_notifications.py
